--- a/khyeras/_dev/styles/khyeras_v1/template/memberlist_view.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/memberlist_view.html
@@ -1,19 +1,21 @@
+{% import 'utilities/macros.html' as function %}
+
 <!-- INCLUDE overall_header.html -->
 
-{% macro field_lists(name, value) %}
-	{% if value %}
-		<dt>{{ name }}{L_COLON}</dt>
-		<dd>{{ value }}</dd>
-	{% endif %}
-{% endmacro %}
+{% if PROFILE_ACCOUNT_TYPE_VALUE == 'Character' %}
+	{% set character_class = 'character-panel tab-panel show-panel' %}
+	{% set writer_class = 'writer-panel tab-panel hide-panel' %}
+{% endif %}
+
+{% set nothing_here %}
+	<p>There's nothing here yet...</p>
+{% endset %}
 
 <h2 class="memberlist-title">{PAGE_TITLE}</h2>
 
 <form method="post" action="{S_PROFILE_ACTION}" id="viewprofile">
 
 <!-- IF PROFILE_ACCOUNT_TYPE_VALUE == 'Character' -->
-	{% set character_class = 'character-panel tab-panel show-panel' %}
-	{% set writer_class = 'writer-panel tab-panel hide-panel' %}
 	<div id="tabs" class="tabs profile-tabs sub-panels" role="tablist">
 		<ul>
 			<li class="tab activetab">
@@ -35,7 +37,9 @@
 						<div class="avatar">{AVATAR_IMG}</div>
 					</div>
 				<!-- ENDIF -->
-				<!-- EVENT memberlist_view_username_prepend --><!-- IF USER_COLOR --><span  class="username-coloured" style="color: {USER_COLOR};"><!-- ELSE --><span><!-- ENDIF -->{USERNAME}</span><!-- EVENT memberlist_view_username_append -->
+				<!-- EVENT memberlist_view_username_prepend -->
+				<!-- IF USER_COLOR --><span  class="username-coloured" style="color: {USER_COLOR};"><!-- ELSE --><span><!-- ENDIF -->{USERNAME}</span>
+				<!-- EVENT memberlist_view_username_append -->
 			</dt>
 			<!-- IF AVATAR_IMG -->
 				<!-- EVENT memberlist_view_rank_avatar_before -->
@@ -70,79 +74,9 @@
 			<!-- ENDIF -->
 		</dl>
 		<!-- IF PROFILE_ACCOUNT_TYPE_VALUE == 'Character' -->
-			<dl class="left-box details profile-details {{ character_class }}">
-				<dd class="character-card details-full">
-					<div class="level">
-						<div class="level-wrap">
-							<span class="level-name">Level</span>
-							<span class="level-value">{{ KHY_MEMBER_LEVEL }}</span>
-						</div>
-					</div>
-					<!-- IF S_PROFILE_C_HP or S_PROFILE_C_MP -->
-						{% set remaining_hp = KHY_MEMBER_TOTAL_HP - PROFILE_C_HP_VALUE %}
-						{% set remaining_mp = KHY_MEMBER_TOTAL_MP - PROFILE_C_MP_VALUE %}
-						<div class="stats">
-							{% if S_PROFILE_C_HP %}
-								<div class="stat-bar stat-bar-small hp-bar">
-									<div class="stat-bar-inner" style="width: {{ ((remaining_hp / KHY_MEMBER_TOTAL_HP) * 100) | number_format(2) }}%"></div>
-									<div class="stat-bar-label">
-										{{ remaining_hp }} / {{ KHY_MEMBER_TOTAL_HP }} {{ PROFILE_C_HP_NAME }}
-									</div>
-								</div>
-							{% endif %}
-							{% if S_PROFILE_C_MP %}
-								<div class="stat-bar stat-bar-small mp-bar">
-									<div class="stat-bar-inner" style="width: {{ ((remaining_mp / KHY_MEMBER_TOTAL_MP) * 100) | number_format(2) }}%"></div>
-									<div class="stat-bar-label">
-										{{ remaining_mp }} / {{ KHY_MEMBER_TOTAL_MP }} {{ PROFILE_C_MP_NAME }}
-									</div>
-								</div>
-							{% endif %}
-						</div>
-					<!-- ENDIF -->
-				</dd>
-				{% set religion_value = (PROFILE_C_RELIGION_TYPE_VALUE) ~ (S_PROFILE_C_RELIGION_OPTS ? (' - ' ~ PROFILE_C_RELIGION_OPTS_VALUE) : '') %}
-
-				{% macro currency_html(currency, letter) %}
-					{% if currency %}
-						{{ currency }}<span class="currency-{{ letter }}">{{ letter }}</span>
-						{{ letter != 'c' ? ' / ' : '' }}
-					{% endif %}
-				{% endmacro %}
-
-				{% set currency_value %}
-					<div class="character-currency">
-						<i class="icon icon-xl rpg-icon rpg-two-coins" aria-hidden="true"></i>
-						{% if PROFILE_C_COPPER_VALUE %}
-							{{ _self.currency_html(KHY_MEMBER_PLATINUM, 'p') }}
-							{{ _self.currency_html(KHY_MEMBER_GOLD, 'g') }}
-							{{ _self.currency_html(KHY_MEMBER_SILVER, 's') }}
-							{{ _self.currency_html(KHY_MEMBER_COPPER, 'c') }}
-						{% else %}
-							{{ _self.currency_html('&#48;', 'c') }}
-						{% endif %}
-					</div>
-				{% endset %}
-
-				{% set character_fields = {
-					'Experience'  				 : (PROFILE_C_EXPERIENCE_VALUE ? PROFILE_C_EXPERIENCE_VALUE : '&#48;'),
-					'Currency'  				 : currency_value,
-					(PROFILE_C_RACE_OPTS_NAME)   : PROFILE_C_RACE_OPTS_VALUE|replace({', ': ' and '}),
-					(PROFILE_C_CLASS_OPTS_NAME)  : PROFILE_C_CLASS_OPTS_VALUE|replace({', ': ' and '}),
-					(PROFILE_C_AGE_NAME)         : PROFILE_C_AGE_VALUE,
-					(PROFILE_C_GENDER_NAME)      : PROFILE_C_GENDER_VALUE,
-					(PROFILE_PRONUNCIATION_NAME) : PROFILE_PRONUNCIATION_VALUE,
-					(PROFILE_C_ORIGIN_NAME)      : PROFILE_C_ORIGIN_VALUE,
-					(PROFILE_C_RESIDENCE_NAME)   : PROFILE_C_RESIDENCE_VALUE,
-					'Religion' 					 : religion_value,
-				} %}
-
-				{% for name, value in character_fields %}
-					{{ _self.field_lists(name, value) }}
-				{% endfor %}
-			</dl>
+			<!-- INCLUDE partials/memberlist_character_details.html -->
 		<!-- ENDIF -->
-		<dl class="left-box details profile-details<!-- IF PROFILE_ACCOUNT_TYPE_VALUE == 'Character' --> {{ writer_class }}<!-- ENDIF -->">
+		<dl class="left-box details profile-details {{ writer_class }}">
 			<!-- EVENT memberlist_view_zebra_before -->
 			<!-- IF S_USER_LOGGED_IN and S_ZEBRA -->
 				<dt>Alliance{L_COLON}</dt>
@@ -180,29 +114,7 @@
 				<dd>{USER_INACTIVE_REASON}</dd>
 			<!-- ENDIF -->
 			<!-- EVENT memberlist_view_non_contact_custom_fields_before -->
-			{% if S_PROFILE_C_WRITER_NAME %}
-				{% set writer_value %}
-					For more information, see <a href="{BOARD_URL}{PROFILE_C_WRITER_NAME_CONTACT}">{PROFILE_C_WRITER_NAME_VALUE}</a>.
-				{% endset %}
-			{% else %}
-				{% set writer_value = '' %}
-			{% endif %}
-
-			{% set writer_fields = {
-				'Age' 							: (S_PROFILE_C_WRITER_NAME ? '' : AGE),
-				(PROFILE_GENDER_NAME) 			: (S_PROFILE_C_WRITER_NAME ? '' : PROFILE_GENDER_VALUE),
-				(PROFILE_PRONUNCIATION_NAME)    : (PROFILE_ACCOUNT_TYPE_VALUE == 'Writer' ? PROFILE_PRONUNCIATION_VALUE : ''),
-				(PROFILE_PHPBB_LOCATION_NAME)   : (S_PROFILE_C_WRITER_NAME ? '' : PROFILE_PHPBB_LOCATION_VALUE),
-				(PROFILE_PHPBB_INTERESTS_NAME)  : (S_PROFILE_C_WRITER_NAME ? '' : PROFILE_PHPBB_INTERESTS_VALUE),
-				(PROFILE_PHPBB_OCCUPATION_NAME) : (S_PROFILE_C_WRITER_NAME ? '' : PROFILE_PHPBB_OCCUPATION_VALUE),
-				(PROFILE_C_WRITER_NAME_NAME)    : writer_value,
-				(PROFILE_AVATAR_CREDIT_NAME)    : PROFILE_AVATAR_CREDIT_VALUE,
-				(PROFILE_SIG_CREDIT_NAME)       : PROFILE_SIG_CREDIT_VALUE
-			} %}
-
-			{% for name, value in writer_fields %}
-				{{ _self.field_lists(name, value) }}
-			{% endfor %}
+			<!-- INCLUDE partials/memberlist_writer_details.html -->
 			<!-- EVENT memberlist_view_non_contact_custom_fields_after -->
 			<!-- IF S_GROUP_OPTIONS -->
 				<dt>{L_USERGROUPS}{L_COLON}</dt>
@@ -213,157 +125,111 @@
 </div>
 
 <!-- IF PROFILE_ACCOUNT_TYPE_VALUE == 'Character' -->
-	<div class="{{ character_class }}" role="tabpanel">
-		<div class="panel bg2">
-			<div class="inner">
-				<div class="column1">
-					<h3>Physical Features</h3>
-					<dl class="details">
-						{% set feature_fields = {
-							(PROFILE_C_COMPLEXION_NAME) : PROFILE_C_COMPLEXION_VALUE,
-							(PROFILE_C_HAIR_NAME)       : PROFILE_C_HAIR_VALUE,
-							(PROFILE_C_EYES_NAME)   	: PROFILE_C_EYES_VALUE,
-							(PROFILE_C_HEIGHT_NAME)  	: PROFILE_C_HEIGHT_VALUE,
-							(PROFILE_C_WEIGHT_NAME) 	: PROFILE_C_WEIGHT_VALUE
-						} %}
-
-						{% for name, value in feature_fields %}
-							{{ _self.field_lists(name, value) }}
-						{% endfor %}
-					</dl>
-					<!-- IF S_PROFILE_C_FEATURES -->
-						<p class="other-features"><strong>Other Features{L_COLON}</strong></p>
-						<p>{{ PROFILE_C_FEATURES_VALUE|replace({'<br /><br />': '</p><p>'}) }}</p>
-					<!-- ENDIF -->
-				</div>
-				<div class="column2">
-					<h3>Personality</h3>
-					<!-- IF S_PROFILE_C_PERSONALITY -->
-						<p>{{ PROFILE_C_PERSONALITY_VALUE|replace({'<br /><br />': '</p><p>'}) }}</p>
-					<!-- ENDIF -->
-					<h3>Relationships and Companions</h3>
-					<!-- IF S_PROFILE_C_RELATIONSHIPS -->
-						<p>{{ PROFILE_C_RELATIONSHIPS_VALUE|replace({'<br /><br />': '</p><p>'}) }}</p>
-					<!-- ENDIF -->
-				</div>
-			</div>
-		</div>
-		<div class="panel bg2">
-			<div class="inner">
-				<h3>Background</h3>
-				<!-- IF S_PROFILE_C_BACKGROUND -->
-					<p>{{ PROFILE_C_BACKGROUND_VALUE|replace({'<br /><br />': '</p><p>'}) }}</p>
-				<!-- ENDIF -->
-			</div>
-		</div>
-	</div>
+	<!-- INCLUDE partials/memberlist_character_desc.html -->
 <!-- ENDIF -->
 
 <!-- EVENT memberlist_view_contact_before -->
-<!-- IF PROFILE_ACCOUNT_TYPE_VALUE == 'Character' -->
-	<div class="{{ writer_class }}" role="tabpanel">
-<!-- ENDIF -->
-		<!-- IF S_PROFILE_WRITING_PREFS and not S_PROFILE_C_WRITER_NAME -->
-			<div class="panel bg2">
-				<div class="inner">
-					<h3>{PROFILE_WRITING_PREFS_NAME}</h3>
-					<p>{PROFILE_WRITING_PREFS_VALUE}</p>
-				</div>
-			</div>
-		<!-- ENDIF -->
+<div{% if writer_class %} class="{{ writer_class }}" role="tabpanel"{% endif %}>
+	<!-- IF S_PROFILE_WRITING_PREFS and not S_PROFILE_C_WRITER_NAME -->
 		<div class="panel bg2">
 			<div class="inner">
-				<!-- EVENT memberlist_view_content_prepend -->
-				<!-- IF not S_PROFILE_C_WRITER_NAME -->
-					<div class="user-contact">
-						<h3>{L_CONTACT_USER}</h3>
-						<div class="contact-icons">
-							<!-- IF U_EMAIL -->
-								<a href="{U_EMAIL}" title="{L_SEND_EMAIL_USER}">
-									<span class="contact-icon email-icon">{L_SEND_EMAIL_USER}</span>
-								</a>
-							<!-- ENDIF -->
-							<!-- IF U_PM -->
-								<a href="{U_PM}" title="{L_SEND_PRIVATE_MESSAGE}">
-									<span class="contact-icon pm-icon">{L_SEND_PRIVATE_MESSAGE}</span>
-								</a>
-							<!-- ENDIF -->
-							<!-- IF U_JABBER and S_JABBER_ENABLED -->
-								<a href="{U_JABBER}" onclick="popup(this.href, 750, 320); return false;" title="{L_SEND_JABBER_MESSAGE}">
-									<span class="contact-icon jabber-icon">{L_SEND_JABBER_MESSAGE}</span>
-								</a>
-							<!-- ENDIF -->
-							<!-- BEGIN custom_fields -->
-								<!-- IF custom_fields.S_PROFILE_CONTACT and custom_fields.PROFILE_FIELD_CONTACT -->
-									<a href="{custom_fields.PROFILE_FIELD_CONTACT}" title="{custom_fields.PROFILE_FIELD_DESC}">
-										<span class="contact-icon {custom_fields.PROFILE_FIELD_IDENT}-icon">{custom_fields.PROFILE_FIELD_DESC}</span>
-									</a>
-								<!-- ENDIF -->
-							<!-- END custom_fields -->
-						</div>
-						<dl class="details">
-							<!-- IF USER_JABBER -->
-								<dt>{L_JABBER}{L_COLON}</dt>
-								<dd>{USER_JABBER}</dd>
-							<!-- ENDIF -->
-							<!-- EVENT memberlist_view_contact_custom_fields_before -->
-							<!-- BEGIN custom_fields -->
-								<!-- IF custom_fields.S_PROFILE_CONTACT and not custom_fields.PROFILE_FIELD_CONTACT -->
-									<dt>{custom_fields.PROFILE_FIELD_NAME}{L_COLON}</dt>
-									<dd>{custom_fields.PROFILE_FIELD_VALUE}</dd>
-								<!-- ENDIF -->
-							<!-- END custom_fields -->
-							<!-- EVENT memberlist_view_contact_custom_fields_after -->
-						</dl>
-					</div>
-				<!-- ENDIF -->
-				<div class="user-stats">
-					<h3>{L_USER_FORUM}</h3>
-					<dl class="details">
-						<!-- EVENT memberlist_view_user_statistics_before -->
-						<dt>{L_JOINED}{L_COLON}</dt>
-						<dd>{JOINED}</dd>
-						<dt>{L_LAST_ACTIVE}{L_COLON}</dt>
-						<dd>{LAST_ACTIVE}</dd>
-						<!-- IF S_WARNINGS -->
-							<dt>{L_WARNINGS}{L_COLON} </dt>
-							<dd>
-								<strong>{WARNINGS}</strong>
-								<!-- IF U_NOTES or U_WARN --> [ <!-- IF U_NOTES --><a href="{U_NOTES}">{L_VIEW_NOTES}</a><!-- ENDIF --> <!-- IF U_WARN --><!-- IF U_NOTES --> | <!-- ENDIF --><a href="{U_WARN}">{L_WARN_USER}</a><!-- ENDIF --> ]<!-- ENDIF -->
-							</dd>
-						<!-- ENDIF -->
-						<dt>{L_TOTAL_POSTS}{L_COLON}</dt>
-						<dd>
-							{POSTS} <!-- IF S_DISPLAY_SEARCH -->| <strong><a href="{U_SEARCH_USER}">{L_SEARCH_USER_POSTS}</a></strong><!-- ENDIF -->
-							<!-- IF POSTS_PCT --><br />({POSTS_PCT} / {POSTS_DAY})<!-- ENDIF -->
-							<!-- IF POSTS_IN_QUEUE and U_MCP_QUEUE --><br />&nbsp;(<a href="{U_MCP_QUEUE}">{L_POSTS_IN_QUEUE}</a>)<!-- ELSEIF POSTS_IN_QUEUE --><br />&nbsp;({L_POSTS_IN_QUEUE})<!-- ENDIF -->
-						</dd>
-						<!-- IF S_SHOW_ACTIVITY and POSTS -->
-							<dt>{L_ACTIVE_IN_FORUM}{L_COLON}</dt>
-							<dd><!-- IF ACTIVE_FORUM != '' --><strong><a href="{U_ACTIVE_FORUM}">{ACTIVE_FORUM}</a></strong><br />({ACTIVE_FORUM_POSTS} / {ACTIVE_FORUM_PCT})<!-- ELSE --> - <!-- ENDIF --></dd>
-							<dt>{L_ACTIVE_IN_TOPIC}{L_COLON}</dt>
-							<dd><!-- IF ACTIVE_TOPIC != '' --><strong><a href="{U_ACTIVE_TOPIC}">{ACTIVE_TOPIC}</a></strong><br />({ACTIVE_TOPIC_POSTS} / {ACTIVE_TOPIC_PCT})<!-- ELSE --> - <!-- ENDIF --></dd>
-						<!-- ENDIF -->
-						<!-- EVENT memberlist_view_user_statistics_after -->
-					</dl>
-				</div>
-				<div class="extra-details">
-					<!-- EVENT memberlist_view_content_append -->
-				</div>
+				<h3>{PROFILE_WRITING_PREFS_NAME}</h3>
+				<p>{PROFILE_WRITING_PREFS_VALUE}</p>
 			</div>
 		</div>
-<!-- IF PROFILE_ACCOUNT_TYPE_VALUE == 'Character' -->
+	<!-- ENDIF -->
+	<div class="panel bg2">
+		<div class="inner">
+			<!-- EVENT memberlist_view_content_prepend -->
+			<!-- IF not S_PROFILE_C_WRITER_NAME -->
+				<div class="user-contact">
+					<h3>{L_CONTACT_USER}</h3>
+					<div class="contact-icons">
+						<!-- IF U_EMAIL -->
+							<a href="{U_EMAIL}" title="{L_SEND_EMAIL_USER}">
+								<span class="contact-icon email-icon">{L_SEND_EMAIL_USER}</span>
+							</a>
+						<!-- ENDIF -->
+						<!-- IF U_PM -->
+							<a href="{U_PM}" title="{L_SEND_PRIVATE_MESSAGE}">
+								<span class="contact-icon pm-icon">{L_SEND_PRIVATE_MESSAGE}</span>
+							</a>
+						<!-- ENDIF -->
+						<!-- IF U_JABBER and S_JABBER_ENABLED -->
+							<a href="{U_JABBER}" onclick="popup(this.href, 750, 320); return false;" title="{L_SEND_JABBER_MESSAGE}">
+								<span class="contact-icon jabber-icon">{L_SEND_JABBER_MESSAGE}</span>
+							</a>
+						<!-- ENDIF -->
+						<!-- BEGIN custom_fields -->
+							<!-- IF custom_fields.S_PROFILE_CONTACT and custom_fields.PROFILE_FIELD_CONTACT -->
+								<a href="{custom_fields.PROFILE_FIELD_CONTACT}" title="{custom_fields.PROFILE_FIELD_DESC}">
+									<span class="contact-icon {custom_fields.PROFILE_FIELD_IDENT}-icon">{custom_fields.PROFILE_FIELD_DESC}</span>
+								</a>
+							<!-- ENDIF -->
+						<!-- END custom_fields -->
+					</div>
+					<dl class="details">
+						<!-- IF USER_JABBER -->
+							<dt>{L_JABBER}{L_COLON}</dt>
+							<dd>{USER_JABBER}</dd>
+						<!-- ENDIF -->
+						<!-- EVENT memberlist_view_contact_custom_fields_before -->
+						<!-- BEGIN custom_fields -->
+							<!-- IF custom_fields.S_PROFILE_CONTACT and not custom_fields.PROFILE_FIELD_CONTACT -->
+								<dt>{custom_fields.PROFILE_FIELD_NAME}{L_COLON}</dt>
+								<dd>{custom_fields.PROFILE_FIELD_VALUE}</dd>
+							<!-- ENDIF -->
+						<!-- END custom_fields -->
+						<!-- EVENT memberlist_view_contact_custom_fields_after -->
+					</dl>
+				</div>
+			<!-- ENDIF -->
+			<div class="user-stats">
+				<h3>{L_USER_FORUM}</h3>
+				<dl class="details">
+					<!-- EVENT memberlist_view_user_statistics_before -->
+					<dt>{L_JOINED}{L_COLON}</dt>
+					<dd>{JOINED}</dd>
+					<dt>{L_LAST_ACTIVE}{L_COLON}</dt>
+					<dd>{LAST_ACTIVE}</dd>
+					<!-- IF S_WARNINGS -->
+						<dt>{L_WARNINGS}{L_COLON} </dt>
+						<dd>
+							<strong>{WARNINGS}</strong>
+							<!-- IF U_NOTES or U_WARN --> [ <!-- IF U_NOTES --><a href="{U_NOTES}">{L_VIEW_NOTES}</a><!-- ENDIF --> <!-- IF U_WARN --><!-- IF U_NOTES --> | <!-- ENDIF --><a href="{U_WARN}">{L_WARN_USER}</a><!-- ENDIF --> ]<!-- ENDIF -->
+						</dd>
+					<!-- ENDIF -->
+					<dt>{L_TOTAL_POSTS}{L_COLON}</dt>
+					<dd>
+						{POSTS} <!-- IF S_DISPLAY_SEARCH -->| <strong><a href="{U_SEARCH_USER}">{L_SEARCH_USER_POSTS}</a></strong><!-- ENDIF -->
+						<!-- IF POSTS_PCT --><br />({POSTS_PCT} / {POSTS_DAY})<!-- ENDIF -->
+						<!-- IF POSTS_IN_QUEUE and U_MCP_QUEUE --><br />&nbsp;(<a href="{U_MCP_QUEUE}">{L_POSTS_IN_QUEUE}</a>)<!-- ELSEIF POSTS_IN_QUEUE --><br />&nbsp;({L_POSTS_IN_QUEUE})<!-- ENDIF -->
+					</dd>
+					<!-- IF S_SHOW_ACTIVITY and POSTS -->
+						<dt>{L_ACTIVE_IN_FORUM}{L_COLON}</dt>
+						<dd><!-- IF ACTIVE_FORUM != '' --><strong><a href="{U_ACTIVE_FORUM}">{ACTIVE_FORUM}</a></strong><br />({ACTIVE_FORUM_POSTS} / {ACTIVE_FORUM_PCT})<!-- ELSE --> - <!-- ENDIF --></dd>
+						<dt>{L_ACTIVE_IN_TOPIC}{L_COLON}</dt>
+						<dd><!-- IF ACTIVE_TOPIC != '' --><strong><a href="{U_ACTIVE_TOPIC}">{ACTIVE_TOPIC}</a></strong><br />({ACTIVE_TOPIC_POSTS} / {ACTIVE_TOPIC_PCT})<!-- ELSE --> - <!-- ENDIF --></dd>
+					<!-- ENDIF -->
+					<!-- EVENT memberlist_view_user_statistics_after -->
+				</dl>
+			</div>
+			<div class="extra-details">
+				<!-- EVENT memberlist_view_content_append -->
+			</div>
+		</div>
 	</div>
-<!-- ENDIF -->
+</div>
+
 <!-- EVENT memberlist_view_contact_after -->
 
 <!-- IF SIGNATURE -->
-<div class="panel bg1">
-	<div class="inner">
-		<h3>{L_SIGNATURE}</h3>
-		<div class="postbody"><div class="signature standalone">{SIGNATURE}</div></div>
+	<div class="panel bg1">
+		<div class="inner">
+			<h3>{L_SIGNATURE}</h3>
+			<div class="postbody"><div class="signature standalone">{SIGNATURE}</div></div>
+		</div>
 	</div>
-</div>
 <!-- ENDIF -->
 
 </form>
