--- a/khyeras/_dev/styles/khyeras_v1/template/utilities/macros.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/utilities/macros.html
@@ -72,6 +72,13 @@
 	</div>
 {% endmacro %}
 
+{% macro field_lists(name, value) %}
+	{% if value %}
+		<dt>{{ name }}{{ lang('COLON') }}</dt>
+		<dd>{{ value }}</dd>
+	{% endif %}
+{% endmacro %}
+
 {% macro message_count(count) %}
 	{% if count > 0 %}
 		{% if count < 100 %}
